# purplekarrot.net

./: .eleventy.js  .gitignore  .gitmodules  404.html  CMakeLists.txt  CNAME  Rules  _config.yml  atom.xml  config.yaml  config.yml  index.html  package-lock.json  package.json  pgp_keys.asc  publish  style.css  style.sass
.github/workflows/: gh-pages.yml
.well-known/lnurlp/: tip
CMake/: AddBlog.cmake  AddCSS.cmake  AddDocumentation.cmake  AddExternal.cmake  AddProject.cmake  AddQuickBook.cmake  AddReference.cmake  AddTestModule.cmake  AddXSLTdoc.cmake  BoostBook.cmake  Documentation.cmake  Doxygen.cmake  FindBoostBook.cmake  FindCSSTidy.cmake  FindGit.cmake  FindSass.cmake  Latex2DocBook.cmake  QuickBook.cmake  XSLTransform.cmake
_data/: metadata.json
_drafts/: cmake_pch.md  cmake_vala.md  projects.html
_includes/: default.html  post.html
_layouts/: default.html
_posts/: 2015-01-01-example-content.md  2015-05-22-cmake-introduction-and-best-practices.md  2015-06-20-cmake-and-test-suites.md  2017-06-06-effective-cmake-2017.md  2024-08-20-building-and-testing-with-cmake.md  2024-09-30-refactoring-ctest.md  2025-01-23-proper-comparisons-in-cmake.md  2025-06-28-fun-with-clang-format.md  2025-07-11-blogging-with-nip23.md  2025-07-12-bitcoinkernel-api-review.md  2025-07-22-cmake-import-export.md  2025-07-26-aiming-for-boss-level-100.md  2025-11-17-virtuality-2026.md  2026-06-08-drop-block-tree-entry-from-bitcoin-kernel.md  2026-06-09-bitcoin-validation-library.md  2026-06-11-serialization.md  2026-06-13-deserialization.md  2026-06-13-to-string.md  2026-06-14-language-bindings.md  2026-06-18-bitcoin-tidy-transaction.md  _posts.11tydata.js
_public/.well-known/: nostr.json
blog/: BoostCMake.qbk  CMakeLists.txt  PPA+CMake.qbk  dputCMake.qbk  eQute.qbk  effective_find_package.txt  first.qbk  second.qbk  third.xml
content/: index.html
content/css/: purpleKarrot.sass
css/: CMakeLists.txt  admonition.sass  code.sass  disqus.sass  disqus.txt  fork-me.sass  navigation.sass  pixelGreen.sass  purpleKarrot.sass  sidebar.sass
design/: CMakeLists.txt
design/css/: admonition.sass  code.sass  disqus.sass  fonts.sass  pixelGreen.sass  search.sass  sidebar.sass
design/js/: ready.js  search.js  twitter.js
doc/: CMakeLists.txt  depgraph.xsl
js/: CMakeLists.txt  search.js
layouts/: default.html  footer.html  header.html  post.html  post_summary.html  sidebar.html
lib/: code_filter.rb  default.rb  item_extensions.rb  teaser_filter.rb
other/: 404.html  CMakeLists.txt  downloads.html  forum.html  projects.html  search.html
output/: index.html
projects/: CMakeLists.txt
xsl/: admon.xsl  annotations.xsl  atom.xslt  autoidx.xsl  autotoc.xsl  block.xsl  blog.xsl  callout.xsl  chunk-code.xsl  chunk-common.xsl  chunk.xsl  chunker.xsl  component.xsl  division.xsl  docbook.xsl  documentation.xsl  footnote.xsl  formal.xsl  graphics.xsl  html.xsl  htmltbl.xsl  inline.xsl  lists.xsl  manifest.xsl  manifest.xslt  math.xsl  other.xsl  page.xsl  param.xsl  pi.xsl  refentry.xsl  sections.xsl  sitemap.xsl  sitemap.xslt  synop.xsl  table.xsl  titlepage.templates.xsl  titlepage.xsl  verbatim.xsl  xref.xsl
xsl-html5/: chunked.xsl  common.xsl  onepage.xsl
xsl-html5/templates/: admonition.xsl  footnote.xsl  lists.xsl  navigation.xsl  refentry.xsl  text_level.xsl  unmatched.xsl
xsl/blog/: date.xsl  disqus.xsl  index.xsl  main.xsl  navigation.xsl  post.xsl  sidebar.xsl  summary.xsl
xsl/impl/: disqus.xsl  footer.xsl  header.xsl  html.head.xsl  sidebar.xsl
xsl/match/: admonition.xsl  all.xsl
xsl/other/: other.xsl
xsl/repositories/: main.xsl
xsl/temp/: html.xsl
xsl/templates/: chunk.xslt  common.xsl  copyright.xsl  disqus.xsl  footer.xsl  header.xsl  html.head.xsl  navigation.xsl  sidebar.xsl
